ubiquity (1.2.6) UNRELEASED; urgency=low

  * Defend a bit more against the apt cache going insane (closes: Malone
    #67689).
  * Handle EFAULT IOError exceptions while copying files (closes: Malone
    #67598).

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 23 Oct 2006 11:00:32 +0100

ubiquity (1.2.5) edgy; urgency=low

  * Automatic update of included source packages: apt-setup 1:0.11ubuntu5,
    console-setup 1.7ubuntu19, partman-base 90ubuntu9, yaboot-installer
    1.1.7ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 20 Oct 2006 23:45:10 +0100

ubiquity (1.2.4) edgy; urgency=low

  * Use update-initramfs -c -k "$(uname -r)" rather than update-initramfs
    -u, as the latter gets very confused if we need to remove kernels, as on
    powerpc (really closes: Malone #66406).
  * Automatic update of included source packages: localechooser 1.20ubuntu8.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 17 Oct 2006 13:14:41 +0100

ubiquity (1.2.3) edgy; urgency=low

  [ Colin Watson ]
  * Fix incorrect loop variable reuse in do_remove, and attempt multiple
    broken package resolution passes while removing packages (closes: Malone
    #66406).
  * Detect existing HFS bootstrap partitions during automatic partitioning
    and take account of them while validating mountpoints (closes: Malone
    #66384).
  * Fix crash on keyboard page if you select a layout with no variants.
  * Remove kernels before running update-initramfs so that we update the
    correct initramfs on powerpc. Make sure to fix up kernel/initrd symlinks
    after running update-initramfs, so that we have something to which to
    point the initrd symlink.

  [ Michael Vogt ]
  * Run fontconfig-voodoo to tweak fontconfig configuration for the selected
    language (closes: Malone #49334).

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 16 Oct 2006 23:49:28 +0100

ubiquity (1.2.2) edgy; urgency=low

  * Make sure supplied GRUB device names are either GRUB-style (e.g.