@@ -4,6 +4,8 @@ ubiquity (1.2.6) UNRELEASED; urgency=low
     #67689).
   * Handle EFAULT IOError exceptions while copying files (closes: Malone
     #67598).
+  * KDE frontend: Treat more user-entered strings as Unicode rather than
+    ASCII (closes: Malone #66742).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 23 Oct 2006 11:00:32 +0100
 
